# Chemist

./: .buildinfo  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .licenserc.yaml  CMakeLists.txt  Jenkinsfile  README.md  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js
LibChemist/: AOBasisSet.cpp  AOBasisSet.hpp  AOShell.cpp  AOShell.hpp  Atom.cpp  Atom.hpp  BasisSet.cpp  BasisSet.hpp  BasisSetFileParser.cpp  BasisSetManager.cpp  BasisSetManager.hpp  BasisSetMap.cpp  BasisSetMap.hpp  BasisSetParser.cpp  BasisSetParser.hpp  BasisShell.cpp  BasisShell.hpp  CMakeLists.txt  Distance.cpp  Distance.hpp  LibChemist.hpp  LibChemistDefs.hpp  Molecule.cpp  Molecule.hpp  MoleculeFileParser.cpp  MoleculeFileParser.hpp  MoleculeManager.cpp  MoleculeManager.hpp  MoleculeStreamParser.cpp  MoleculeStreamParser.hpp  OrbitalSpace.hpp  PeriodicTable.cpp  PeriodicTable.hpp  SetOfAtoms.cpp  SetOfAtoms.hpp  SetOfAtomsParser.cpp  SetOfAtomsParser.hpp  ShellTypes.cpp  ShellTypes.hpp  Util.hpp  (+1 more)
LibChemist/Defaults/: NWXAtomicDensities.cpp  NWXAtomicDensities.hpp  NWXBasisList.hpp  NWXBasisSetManagerPIMPL.cpp  NWXMoleculeManagerPIMPL.cpp  NWXPeriodicTablePIMPL.cpp  PropertyTypes.hpp
LibChemist/Implementations/: AOBasisSetPIMPL.hpp  AOShellPIMPL.hpp  AoSFacade.hpp  AtomPIMPL.hpp  BasisSetManagerPIMPL.hpp  ContainerPIMPL.hpp  MolPIMPL.hpp  MoleculeManagerPIMPL.hpp  PeriodicTablePIMPL.hpp
LibChemist/lut/: AtomicInfo.cpp  AtomicInfo.hpp
LibChemist_Test/: CMakeLists.txt  TestAOBasisSet.cpp  TestAOShell.cpp  TestAoSFacade.cpp  TestAtom.cpp  TestAtomicInfo.cpp  TestBasisFileParser.cpp  TestBasisSet.cpp  TestBasisSetMap.cpp  TestBasisSetParser.cpp  TestBasisShell.cpp  TestHelpers.hpp  TestLibChemist.cpp  TestMolecule.cpp  TestMoleculeFileParser.cpp  TestMoleculeStreamParser.cpp  TestPeriodicTable.cpp  TestPropertyTypes.cpp  TestPropertyTypes.hpp  TestSetOfAtoms.cpp  TestSetOfAtomsParser.cpp
NWChemExBase/: .gitignore  .gitrepo  CMakeLists.txt  README.md
NWChemExBase/NWChemExBase/: CMakeLists.txt
NWChemExBase/NWChemExBase_Test/: CMakeLists.txt  RunNWChemExBaseTest.sh  TestUtilityMacros.cmake
NWChemExBase/cmake/: DependencyMacros.cmake  NWChemExBaseConfig.cmake.in  NWChemExTargetConfig.cmake.in  OptionMacros.cmake  TargetMacros.cmake
NWChemExBase/dox/: Building.md  ExtendingNWChemExBase.md
libchemist/: CMakeLists.txt  ao_basis_set.cpp  ao_basis_set.hpp  ao_basis_view.hpp  ao_shell.cpp  ao_shell.hpp  atom.cpp  atom.hpp  basis_set_file_parser.hpp  basis_set_manager.cpp  basis_set_manager.hpp  basis_set_map.cpp  basis_set_map.hpp  canonical_mos.cpp  canonical_mos.hpp  libchemist.hpp  molecule.cpp  molecule.hpp  molecule_manager.cpp  molecule_manager.hpp  molecule_stream_parser.cpp  molecule_stream_parser.hpp  orbital_space.cpp  orbital_space.hpp  orthogonal_space.cpp  orthogonal_space.hpp  periodic_table.cpp  periodic_table.hpp  point.cpp  point.hpp  point_view.cpp  point_view.hpp  sparse_map.cpp  sparse_map.hpp  types.hpp
libchemist/basis_set/: CMakeLists.txt  ao_basis_function.hpp  ao_basis_set.hpp  ao_center.hpp  ao_shell.hpp  basis_set.hpp  basis_set_design.rst  gaussian.hpp  gaussian_alias.hpp  gaussian_ao.hpp  gaussian_ao_alias.hpp  gaussian_ao_view.hpp  gaussian_basis_set.hpp  gaussian_center.hpp  gaussian_center_alias.hpp  gaussian_shell.hpp  gaussian_shell_alias.hpp  gaussian_view.hpp  parameter.hpp  primitive.hpp  view.hpp
libchemist/defaults/: nwx_atomic_densities.cpp  nwx_atomic_densities.hpp  nwx_basis_list.hpp  nwx_basis_set_manager_pimpl.cpp  nwx_molecule_manager_pimpl.cpp  nwx_periodic_table_pimpl.cpp
libchemist/detail_/: ao_shell_pimpl.hpp  aos_facade.hpp  atom_pimpl.hpp  basis_set_manager_pimpl.hpp  canonical_mo_pimpl.hpp  container_pimpl.hpp  mol_pimpl.hpp  molecule_manager_pimpl.hpp  orbital_space_pimpl.hpp  periodic_table_pimpl.hpp  point_pimpl.hpp  sparse_map_pimpl.hpp  view_base.hpp
libchemist/orbital_space/: ao_space.cpp  ao_space.hpp  base_space.hpp  canonical_mos.cpp  canonical_mos.hpp  canonical_space.hpp  dependent_orbital_space.hpp  dependent_space.hpp  derived_space.hpp  orbital_space.cpp  orbital_space.hpp  orbital_space_class.cpp  orbital_space_class.hpp  orthogonal_space.cpp  orthogonal_space.hpp  transform.hpp
libchemist/point/: CMakeLists.txt  point.cpp  point.hpp  point_view.cpp  point_view.hpp
libchemist/sparse_map/: README.md  domain.cpp  domain.hpp  from_sparse_map.hpp  index.hpp  sparse_map.cpp  sparse_map.hpp  sparse_map_class.cpp  sparse_map_class.hpp
libchemist/ta_helpers/: condense_tensor.hpp  condense_tensor_range.cpp  condense_tensor_range.hpp  diagonalize_inner_tensors.hpp  from_sparse_map.hpp  get_block_idx.hpp  is_tile_bound.cpp  is_tile_bound.hpp  linalg_inner_tensors.hpp  pow.hpp  remove_redundancy.hpp  retile.cpp  retile.hpp  slice.hpp  ta_hashers.hpp  ta_helpers.hpp
tests/: CMakeLists.txt  ao_basis_set.cpp  ao_shell.cpp  aos_facade.cpp  atom.cpp  basis_set_map.cpp  chemist.cpp  libchemist.cpp  molecule.cpp  molecule_stream_parser.cpp  orbital_space.cpp  periodic_table.cpp  point.cpp  sparse_map.cpp  test_chemist.hpp  test_libchemist.hpp  test_main.cpp
tests/basis_set/: CMakeLists.txt  ao_basis_function.cpp  gaussian.cpp  gaussian_alias.cpp  gaussian_ao.cpp  gaussian_center.cpp  gaussian_shell.cpp  gaussian_view.cpp  primitive.cpp
tests/chemical_system/: chemical_system.cpp  chemical_system_pimpl.cpp
tests/density/: decomposable_density.cpp  density.cpp  test_density.hpp
tests/detail_/: CMakeLists.txt  point_pimpl.cpp  view_base.cpp
tests/electrons/: electron.cpp  many_electrons.cpp
tests/fields/: electric_field.cpp
tests/hamiltonian/: derived_operator.cpp  fock_operator.cpp  hamiltonian.cpp  operator.cpp
tests/integral_factory/: integral_factory.cpp  integral_factory_pimpl.cpp  test_integral_factory.hpp
tests/managers/: basis_set_manager.cpp  molecule_manager.cpp  periodic_table.cpp
tests/molecule/: atom.cpp  molecule.cpp  molecule_stream_parser.cpp
tests/nucleus/: fragmented_nuclei.cpp  nuclei.cpp  nucleus.cpp  nucleus_view.cpp
tests/operator/: coulomb.cpp  (+21 more)
(+5451 files in other folders)
